fix: replace Path.of() with Paths.get() for Java 8 compatibility